crates/cribo/tests/snapshots/execution_results@stickytape_implicit_init_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_implicit_init_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
