crates/cribo/tests/snapshots/execution_results@stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_import_from_as_module/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
