crates/cribo/tests/snapshots/execution_results@stickytape_imports_in_imported_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_imports_in_imported_modules/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
